--- a/android-app/NutriAI/app/src/main/res/values/colors.xml
+++ b/android-app/NutriAI/app/src/main/res/values/colors.xml
@@ -38,6 +38,8 @@
     <color name="transparent">#00000000</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="background_light">#F8FAFC</color>
+    <color name="warning_light">#FEF3C7</color>
     
     <!-- Material 3 Colors -->
     <color name="md_theme_primary">#2563EB</color>
