--- a/android-app/NutriAI/app/src/main/res/values/colors.xml
+++ b/android-app/NutriAI/app/src/main/res/values/colors.xml
@@ -40,6 +40,8 @@
     <color name="white">#FFFFFF</color>
     <color name="background_light">#F8FAFC</color>
     <color name="warning_light">#FEF3C7</color>
+    <color name="surface_light">#F8FAFC</color>
+    <color name="border_light">#E5E7EB</color>
     
     <!-- Material 3 Colors -->
     <color name="md_theme_primary">#2563EB</color>
