changes in NutriAIApplication.kt, themes.xml

--- a/android-app/NutriAI/app/src/main/res/values/themes.xml
+++ b/android-app/NutriAI/app/src/main/res/values/themes.xml
@@ -1,3 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <style name="Theme.NutriAI" parent="Theme.Material3.DynamicColors.DayNight">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightNavigationBar">false</item>
+        <item name="material3:shapeAppearanceSmallComponent">@style/Shape.Round</item>
+        <item name="material3:shapeAppearanceMediumComponent">@style/Shape.Round</item>
+        <item name="material3:shapeAppearanceLargeComponent">@style/Shape.Round</item>
+        <item name="material3:motionDurationLong1">400</item>
+        <item name="material3:motionDurationMedium2">250</item>
+    </style>
+
+    <style name="Shape.Round" parent="ShapeAppearance.Material3.Small.Component">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item>
+    </style>
+</resources>
+
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme -->
     <style name="Theme.NutriAI" parent="Theme.Material3.DayNight.NoActionBar">
